--- a/client/src/scss/module/_header.scss
+++ b/client/src/scss/module/_header.scss
@@ -90,7 +90,7 @@ header{display: flex; justify-content: space-between; align-items: center; @incl
             }
             .mbl-user-items{
                 ul{display: flex; flex-flow: wrap; align-items: center; gap: 15px;
-                    li{ @include font20;color: #fff; text-align: center; font-family: $openSans; font-weight: $fontW500}
+                    li{ font-size: 20px; color: #fff; text-align: center; font-family: $openSans; font-weight: $fontW500}
                     .user-icon{
                         svg{
                             path{fill:#fff;height: 20px; width: 20px;}
@@ -112,7 +112,7 @@ header{display: flex; justify-content: space-between; align-items: center; @incl
     }
 }
 @media all and (max-width: 720px){
-    header{padding-top: 10px; padding-bottom: 10px;
+    header{padding-top: 15px; padding-bottom: 10px;
         .logoName{
             span{font-size: 32px;}
         }
