--- a/client/src/scss/pages/_about.scss
+++ b/client/src/scss/pages/_about.scss
@@ -7,7 +7,7 @@
       .contentBox{width: 50%;
         h2{color: #fff; font-family: $dancingFont; @include font40; font-weight: bold;}
       
-        p{margin: 15px 0; color: #fff; font-family: $openSans; @include font18; line-height: 140%; letter-spacing: 0.5px;} 
+        p{margin: 15px 0; color: #fff; font-family: $openSans; @include font18; line-height: 160%; letter-spacing: 1px; text-align: justify;} 
       }
     }
   }
