--- a/client/src/scss/pages/_table-book.scss
+++ b/client/src/scss/pages/_table-book.scss
@@ -70,3 +70,23 @@
     }
   }
 }
+
+//Booking Show CSS
+
+.bookingDetails{ margin-bottom: 100px; 
+  .secWrapper{@include wrapperMargin; border-top: 1px solid #999;
+    h2{color: #000; font-family: $dancingFont; @include font36; font-weight: bold; margin: 20px 0 30px; }
+    .mainContainer{width: 100%;
+      .headings{display: flex; justify-content: space-between; align-items: center; border: 1px solid black;
+        span{width: 20%; text-align: center; @include font20; text-transform: uppercase; font-weight: 600; border-right: 1px solid #000; padding: 5px 0;
+          &:last-child{border: none;}
+        } 
+      }
+      .dataRow{display: flex; justify-content: space-between; align-items: center; border: 1px solid black; border-top: none;
+        span{width: 20%; text-align: center; @include font20; text-transform: uppercase; font-weight: 600; border-right: 1px solid #000; padding: 5px 0;
+          &:last-child{border: none;}
+        }
+      }
+    }
+  }
+}
