--- a/client/src/scss/pages/_cart.scss
+++ b/client/src/scss/pages/_cart.scss
@@ -29,15 +29,29 @@
           }
         }
       }
-     .orderSummaryBox{width: 30%;
-      h3{}
-      .billBox{
-        .billSummary{}
-        .totalBox{
-          .innerTotalBox{}
+     .orderSummaryBox{width: 30%; background: #fff; padding: 20px; box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;border-radius: 12px;
+      h3{@include font20; line-height: 100%; letter-spacing: 0.5px; margin-bottom: 20px;}
+      .billBox{display: flex; flex-flow: column; gap: 10px; margin-bottom: 20px;
+        .billSummary{display: flex; justify-content: space-between;
+          span{@include font16; line-height: 120%; letter-spacing: 0.5px; font-weight: 500; color: #6a6a6a;
+            &:last-child{font-weight: 600; color: #000;}
+          }
+        }
+        .totalBox{border-top: 1px solid lightgray; padding-top: 10px;
+          .innerTotalBox{display: flex; justify-content: space-between;
+             span{@include font16; line-height: 120%; letter-spacing: 0.5px; font-weight: 500; color: #6a6a6a;
+            &:last-child{font-weight: 600; color: #000;}
+          }
+          }
         }
       }
-      .checkoutBtn{}
+      .checkoutBtn{display: flex; flex-flow: column; gap: 10px;
+        button{@include font18; line-height: 140%; letter-spacing: 0.7px; padding: 10px 0; cursor: pointer; font-weight: 500;}
+        .paymentBtn{background: #ffbe33; color: #fff; transition: 0.5s all ease-in;
+         &:hover{background: #ffc107;}
+        }
+        .shopingBtn{background: #fff; border: 1px solid #999;}
+      }
     }
     }
     
